<resources>
    <string name="app_name">Age To Minutes</string>
    <string name="calculate_your">CALICULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="minutes_old">Minutes Old</string>
    <string name="dob">DOB</string>
    <string name="select_a_date">SELECT A DATE</string>
    <string name="your_birthday_will_be_displayed_here">Your birthday will be displayed here</string>
</resources>